# libsdl-

./: .gitignore  CMakeLists.txt  README.md
examples/: main.cc
include/sdl++/: mixer.h  sdl.h
src/: sdl++-mixer.cc  sdl++.cc
